--- a/index.html
+++ b/index.html
@@ -1,97 +1,112 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Kennylt.GitHub.io by KennyLT</title>
-  </head>
-
-  <body>
-    <a id="forkme_banner" href="https://github.com/KennyLT">View on GitHub</a>
-    <div class="shell">
-
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Kennylt.GitHub.io</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
-
-      <div id="no-downloads">
-        <span class="inner">
-        </span>
-      </div>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/KennyLT">KennyLT</a> can be found on <a href="https://github.com/KennyLT">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
+<head>
+<title>Kenny's Resume</title>
+<style>
+  .container{
+    width:1000px;
+    margin:0 auto;
+  }
+  .div_main{
+    width:1000px;
+    float:left;
+  }
+  .text_center{
+    text-align: center;
+  }
+  .div_left{
+    float:left;
+  }
+  .div1{
+    width:300px;
+  }
+  .div2{
+    width:500px;
+  }
+  .div3{
+    width:200px;
+    text-align: center;
+  }
+</style>
+</head>
+<body>
+<div class="container">
+  <!-- contact info -->
+  <div class="text_center">
+    <h2>Yafan(Kenny) Yang<br></h2>
+    47671 Westinghouse Drive<br>
+    Fremont, CA 94539<br>
+    510-709-6083<br>
+    Kaztony716@gmail.com<br>
+  </div><br>
+  <!-- part 1 --> 
+  <div class="div_main">
+    <div class="div_left div1">
+    <h3>EDUCATION</h3>
+    </div>
+    <div class="div_left div2">
+    <h4>Northwestern Polytechnic University</h4>                                                                                  
+    Bachelor of Business and Information Science<br><br>
+    Aug 2010 - Aug 2014<br>
 
     </div>
+    <br><b><div class="div_left div3">Fremont, CA</div></b>
+  </div><br>
 
-    
-  </body>
+<div class="div_main">
+    <div class="div_left div1">
+    <h2> </h2>
+    </div>
+    <div class="div_left div2">
+    <h4>Northwestern Polytechnic University</h4>                                                                                
+    <br>Master of Computer Science
+    <br>Sep 2014 - Present
+    </div>
+    <br><b><div class="div_left div3">Fremont, CA</div></b>
+  </div><br>
+
+  <!-- part 2 -->
+  <div class="div_main">    
+    <div class="div_left div1">
+      <h3>WORKSHIP EXPERIENCE</h3>
+    </div>
+    <div class="div_left div2">
+    <h4>Beijing Tian Chuang Shi Yuan Architectural Decoration Company</h4>                                                                      
+    <br>Engineer Assistant 
+    <br>Dec 2008 - Feb 2009
+    <br>> Market Research
+    <br>> Collecting Customers Feedback
+    <br>> Adobe Illustrator Design</div>
+    <br><b><div class="div_left div3">Beijing, China</div></b>
+  </div><br>
+  <!-- part 3 -->
+  <div class="div_main">    
+    <div class="div_left div1"><h3>SPECIAL SKILLS</h3></div>
+    <div class="div_left div2">
+    <br>Five years driving experience with non-accident in California                                                                                  
+  </div><br>
+  <!-- part 4 -->
+  <div class="div_main">    
+    <div class="div_left div1"><h3>COMPUTER PROFICIENCIES</h3></div>
+    <div class="div_left div2">
+    <br>MS Office, Adobe Illustrator, Adobe Flash,
+    <br>C language,Data Structure,Linux,HTML,CSS
+  </div><br>
+  <!-- part 5 -->
+  <div class="div_main">    
+    <div class="div_left div1"><h3>VOLUNTEER WORKS</h3></div>
+    <div class="div_left div2">
+    <br>Volunteered at Fremont Tri-City Volunteers Center
+    <br>Summer 2011</div>
+    <br><b><div class="div_left div3">Fremont, CA</div></b>
+  </div><br>
+  <!-- part 6 -->
+  <div class="div_main">    
+    <div class="div_left div1"><h3>LANGUAGE SKILLS</h3></div>
+    <div class="div_left div2">
+    <br>Mandarin-Native, English-Fluent
+  </div><br>
+</div>
+  
+</body>
 </html>
